Add Bfres to project

--- a/WPF .NET 6/Breath of the Wild Multiplayer/Breath of the Wild Multiplayer.csproj
+++ b/WPF .NET 6/Breath of the Wild Multiplayer/Breath of the Wild Multiplayer.csproj
@@ -223,6 +223,7 @@
 
   <ItemGroup>
     <PackageReference Include="AampLibrary" Version="1.0.10" />
+    <PackageReference Include="BfresLibrary" Version="1.0.1" />
     <PackageReference Include="CsYaz0" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.2" />
